@startuml

title __VIEW's Class Diagram__\n

  namespace com.ustc.location {
    namespace view {
      class com.ustc.location.view.MyMapView {
          + drawLayer : GraphicsLayer
          - dialog : ProgressDialog
          - featureLayer : FeatureLayer
          - graphicsLayer : GraphicsLayer
          - handler : Handler
          - isInitMap : boolean
          - mapView : MapView
          - markerSymbol : SimpleFillSymbol
          - paintList : RecyclerView
          - searchEt : EditText
          - searchView : RelativeLayout
          - view : View
          + MyMapView()
          + MyMapView()
          + handleDrawEvent()
          + initPaintTool()
          + loadLocalMap()
          + onClick()
          + onEditorAction()
          + onItemClick()
          + showAreaInfo()
          + showNativeInfo()
          + showPeolpleInfo()
          + visiblePaintTool()
          + visiblesearchTool()
          - initHandler()
          - initView()
          - search()
          - setPaintToolState()
          - setSearchViewState()
          - showSearchInfo()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace view {
      class com.ustc.location.view.ShowSymbolInfo {
          - areGraphic : Graphic[]
          - context : Context
          - featureLayer : FeatureLayer
          - gInts : int[]
          - infoLayout : GraphicsLayer
          - isShow : boolean
          - mapLongs : long[]
          - mapView : MapView
          - peoGraphic : Graphic[]
          + ShowSymbolInfo()
          + removeLayout()
          + setMapLongs()
          + showAreaInfo()
          + showNativeInfo()
          + showPeopleInfo()
          - showLayout()
      }
    }
  }
  

  com.ustc.location.view.MyMapView .up.|> android.view.View.OnClickListener
  com.ustc.location.view.MyMapView .up.|> android.widget.TextView.OnEditorActionListener
  com.ustc.location.view.MyMapView .up.|> com.ustc.location.adapter.RecyclerViewHolder.RVItemClickListener
  com.ustc.location.view.MyMapView .up.|> com.ustc.location.drawtool.DrawEventListener
  com.ustc.location.view.MyMapView -up-|> android.widget.RelativeLayout
  com.ustc.location.view.MyMapView o-- com.ustc.location.drawtool.DrawTool : drawTool
  com.ustc.location.view.MyMapView o-- com.ustc.location.view.ShowSymbolInfo : showTypeInfo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
